--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/golang.org/x/tools"]
 	path = src/golang.org/x/tools
 	url = https://go.googlesource.com/tools
+[submodule "src/sourcegraph.com/sqs/goreturns"]
+	path = src/sourcegraph.com/sqs/goreturns
+	url = ../../sqs/goreturns
