--- a/azuremonitor/client/package.json
+++ b/azuremonitor/client/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.3",
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
