renamed DB table and did new dbcontext

--- a/azuremonitor/env/proxy.dev.toml
+++ b/azuremonitor/env/proxy.dev.toml
@@ -2,7 +2,7 @@ host = "localhost"
 port = "5432"
 user = "postgres"
 password = "password"
-name = "azuremonitor"
+name = "azmonitor"
 sslmode = "disable"
 driver = "postgres"
 host_ip = "10.100.100.3"
